# GamePlus-Editor

./: Contribute  Important  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
Docs/: CreatedByPython.json
Editor/: CodeEditorPython.py  CodeEditorUrsaVisor.py  ColorMenu.py  ConfigEditor.py  ConfigProjectMenu.py  CurrentFolderNameReturner.py  DirectionBox.py  Gizmo.py  Main.py  OpenFile.py  OtherStuff.py  ProjectEditor.py  ProjectExporter.py  ProjectLoader.py  ProjectSaver.py  RecentProjectFinder.py  SceneEditor.py  StartingUI.py  TODO  application.py  boxcast.py  collider.py  lights.py  mesh.py  readme.md  tempCodeRunnerFile.py  texture.py  trigger.py  window.py
Editor/CoreFiles/: BlueLink.py  ConfigProjectMenu.py  GameViewer.py  InstructionList.py  InstructionMenu.py  NewCursor.py  Terminal.py  TrueFalseIndicator.py
Editor/FileSystem/: FileMenu.py
Editor/Netwroking/: HostProjectMenu.py  JoinProjectMenu.py
Editor/Shaders/: BaseColor.py  Intro.py
Editor/ursina/: __init__.py  build.py  color.py  curve.py  entity.py  input_handler.py  lights.py  main.py  mesh_importer_new.py  mesh_importer_old.py  (+7 more)
GamePlus-Editor/: __init__.py
GamePlusEditor/: CodeEditorPython.py  CodeEditorUrsaVisor.py  ColorMenu.py  DirectionBox.py  Gizmo.py  Main.py  OtherStuff.py  PositionGizmo.py  ProjectEditor.py  ProjectExporter.py  ProjectLoader.py  ProjectReader.py  ProjectSaver.py  ProjectSavingEncoder.py  RecentProjectFinder.py  SceneEditor.py  StartingUI.py  Temp  Temp.py  __init__.py  launcher.py
ursina editor/: SceneEditor.py
(+244 files in other folders)
